--- a/em.tex
+++ b/em.tex
@@ -16,7 +16,7 @@
 \maketitle
 
 \include{01-force-electrique/planif01}
-%\include{cours02/planif02}
+\include{02-champ-electrique/planif02}
 %\include{cours03/planif03}
 %\include{cours04/planif04}
 %\include{cours05/planif05}
