--- a/common.tex
+++ b/common.tex
@@ -17,7 +17,7 @@
 \tikzset{>=latex,
     negative/.style={draw=teal!70!black, fill=teal!10, thick},
     positive/.style={draw=red, fill=red!10, thick}}
-\usetikzlibrary{matrix,calc,decorations.pathreplacing,decorations.pathmorphing,decorations.markings}
+\usetikzlibrary{matrix,calc,decorations.pathreplacing,decorations.pathmorphing,decorations.markings,positioning}
 \sisetup{locale=FR, per-mode=symbol}
 
 \newcommand{\abs}[1]{\left| #1 \right|}
