--- a/em.tex
+++ b/em.tex
@@ -17,32 +17,9 @@
 
 \include{01-force-electrique/planif01}
 \include{02-champ-electrique/planif02}
-%\include{cours03/planif03}
-%\include{cours04/planif04}
-%\include{cours05/planif05}
-%\include{cours06/planif06}
-%\include{cours07/planif07}
-%\include{cours08/planif08}
-%\include{cours09/planif09}
-%\include{cours10/planif10}
-%\include{cours11/planif11}
-%\include{cours12/planif12}
-%\include{cours13/planif13}
-%\include{cours14/planif14}
-%\include{cours15/planif15}
-%\include{cours16/planif16}
-%\include{cours17/planif17}
-%\include{cours18/planif18}
-%\include{cours19/planif19}
-%\include{cours20/planif20}
-%\include{cours21/planif21}
-%\include{cours23/planif23}
-%\include{cours25/planif25}
-%\include{cours26/planif26}
-%\include{cours27/planif27}
-%\include{cours30/planif30}
-%\include{cours31/planif31}
-%\include{cours32/planif32}
-%\include{cours34/planif34}
+\include{03-gauss/planif03}
+\include{04-potentiel/planif04}
+\include{07-condensateurs/planif07}
+\include{05-courant-resistance/planif05}
 
 \end{document}
