--- a/em.tex
+++ b/em.tex
@@ -9,6 +9,7 @@
 \author{Loïc Séguin-Charbonneau}
 
 \title{Planification du cours d'électricité et magnétisme}
+\publishers{v. 2.0}
 
 
 \begin{document}
@@ -16,10 +17,14 @@
 \maketitle
 
 \include{01-force-electrique/planif01}
-\include{02-champ-electrique/planif02}
-\include{03-gauss/planif03}
-\include{04-potentiel/planif04}
-\include{07-condensateurs/planif07}
-\include{05-courant-resistance/planif05}
+%\include{02-champ-electrique/planif02}
+%\include{03-gauss/planif03}
+%\include{04-potentiel/planif04}
+%\include{07-condensateurs/planif07}
+%\include{05-courant-resistance/planif05}
+%\include{06-sources-circuits/planif06}
+%\include{08-circuits-rc/planif08}
+%\include{09-courant-alternatif/planif09}
+%\include{10-force-magnetique/planif10}
 
 \end{document}
